bk_ida/gccida/c0/fname_as_string
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fname_as_string/src/c-common.c:956:9: error: use of undeclared identifier 'arg0'
return &arg0; 
        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fname_as_string/src/obj/c-common.o] Error 1
